Fix: inversion et style des boutons dans la modale menus

--- a/templates/swigo/renseigner_commande.html
+++ b/templates/swigo/renseigner_commande.html
@@ -737,6 +737,7 @@
 
 
 <!-- ✅ MODALE POUR LES MENUS -->
+<!-- ✅ MODALE POUR LES MENUS -->
 <div class="modal fade" id="menu-modal" tabindex="-1" aria-labelledby="menu-modal-title" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -751,14 +752,13 @@
         </div>
   
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" onclick="validerMenu()">Ajouter au panier</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+          <button type="button" class="btn btn-outline-warning" data-bs-dismiss="modal">Annuler</button>
+          <button type="button" class="btn btn-outline-success" onclick="validerMenu()">Ajouter au panier</button>
         </div>
   
       </div>
     </div>
   </div>
-  
 
 
 
